@@ -324,6 +324,8 @@ Friends who have spotted bugs include:
 
 =item Michael Cummings
 
+=item Doug Dawson
+
 =back
 
 Bricolage's translation team:
